<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/board_ad"
        layout="@layout/ad" />

    <HorizontalScrollView
        android:id="@+id/board_tabs_scroll_portrait"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/board_ad" >

        <LinearLayout
            android:id="@+id/board_tabs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
        </LinearLayout>
    </HorizontalScrollView>

    <LinearLayout
        android:id="@+id/board_black_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/board_tabs_scroll_portrait"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/board_black_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/board_black_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/board_black_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <pl.mg6.yafi.BoardView
        android:id="@+id/board_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/board_black_info" />

    <RelativeLayout
        android:id="@+id/board_review_overlay"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignBottom="@+id/board_view"
        android:layout_alignLeft="@+id/board_view"
        android:layout_alignRight="@+id/board_view"
        android:layout_alignTop="@+id/board_view"
        android:gravity="center"
        android:visibility="gone" >

        <ImageButton
            android:id="@+id/board_review_first"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/accessibility_board_first"
            android:onClick="onFirstClick"
            android:src="@drawable/board_first" />

        <ImageButton
            android:id="@+id/board_review_previous"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/board_review_first"
            android:background="@null"
            android:contentDescription="@string/accessibility_board_previous"
            android:onClick="onPreviousClick"
            android:src="@drawable/board_previous" />

        <ImageButton
            android:id="@+id/board_review_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/board_review_previous"
            android:background="@null"
            android:contentDescription="@string/accessibility_board_next"
            android:onClick="onNextClick"
            android:src="@drawable/board_next" />

        <ImageButton
            android:id="@+id/board_review_last"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/board_review_next"
            android:background="@null"
            android:contentDescription="@string/accessibility_board_last"
            android:onClick="onLastClick"
            android:src="@drawable/board_last" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/board_white_info"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/board_view"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/board_white_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp" />

        <TextView
            android:id="@+id/board_white_rating"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <TextView
            android:id="@+id/board_white_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/board_white_info"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/board_result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/board_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right" />
    </LinearLayout>

</RelativeLayout>